--- a/config/locales/models.yml
+++ b/config/locales/models.yml
@@ -31,7 +31,7 @@ ja:
           longitude: 経度
           value1: 水の流れはゆたかですか？
           value2: 岸のようすは自然らしいですか？
-          value#: 魚が川をさかのぼれるだろうか？
+          value3: 魚が川をさかのぼれるだろうか？
           value4: 河原と水辺に植物がはえていますか？
           value5: 鳥はいますか？
           value6: 魚がいますか？
